[package]
name = "activity_monitor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
build = "build.rs"

[lib]
name = "activity_monitor"
crate-type = ["cdylib"]  # Compile as a dynamic library for FFI

[dependencies]
# Common dependencies
chrono = "0.4"
lazy_static = "1.4"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
] }

# Build dependencies
[build-dependencies]
cc = "1.0"